--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set( MSVC_INCREMENTAL_DEFAULT ON )
 
 # Default to Release builds. To use system CFLAGS only (for distro builds), set CMAKE_BUILD_TYPE to None
 if( NOT CMAKE_BUILD_TYPE )
-   set( CMAKE_BUILD_TYPE "Release" )
+  set( CMAKE_BUILD_TYPE "Release" )
 endif()
 
 project( Daemon C CXX )
@@ -798,10 +798,10 @@ else()
   endif()
   find_library( LIBICONV iconv )
   if( LIBICONV )
-    set( LIBS_BASE ${LIBS_BASE} ${LIBICONV} )
+    set( LIBS_ENGINE ${LIBS_ENGINE} ${LIBICONV} )
   endif()
   mark_as_advanced( LIBM LIBRT LIBICONV )
-  set( LIBS_BASE ${LIBS_BASE} ${CMAKE_DL_LIBS} )
+  set( LIBS_ENGINE ${LIBS_ENGINE} ${CMAKE_DL_LIBS} )
   find_package( Threads REQUIRED )
   set( LIBS_BASE ${LIBS_BASE} ${CMAKE_THREAD_LIBS_INIT} )
   if( MAC )
