Fixes for MSVC 2013 build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,7 @@ if( MSVC )
     set_c_cxx_flag( "/GL" RELEASE )
     set_linker_flag( "/LTCG" )
   endif()
+  set_linker_flag( "/SAFESEH:NO" )
 else()
   set_c_cxx_flag( "-ffast-math" )
   set_c_cxx_flag( "-fno-strict-aliasing" )
