Add /safeseh option for ml.exe
This prevents a linking error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -613,9 +613,9 @@ set( QCOMMONLIST
 # Visual studio can't handle inline assembly
 if( MSVC )
   if( ${BUILD_ARCH} STREQUAL "i386" )
-    set( ASM_APP ml )
+    set( ASM_APP ml /safeseh)
   else()
-    set( ASM_APP ml64 -D idx64=1 )
+    set( ASM_APP ml64 -D idx64=1 /safeseh )
   endif()
   set( QCOMMONLIST ${QCOMMONLIST} ftola.obj snapvector.obj )
   # Work around - bugs in cmake prevent adding asm files to target in VS projects
