Fix opus build for msvc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1671,7 +1671,7 @@ if( BUILD_CLIENT )
   # Visual Studio specific settings
   if( MSVC )
     include_directories( ${MOUNT_DIR}/libs/msinttypes )
-    set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS ZLIB_WINAPI HAVE_CONFIG_H )
+    set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS ZLIB_WINAPI )
   endif()
 
   # This section finds and provides REQUIRED dependencies to target client
@@ -1716,6 +1716,8 @@ if( BUILD_CLIENT )
     set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS USE_VOIP )
     if( NOT MSVC )
       set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS FLOATING_POINT )
+    else()
+      set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H )
     endif()
     if( USE_INTERNAL_SPEEX )
       # BEFORE is required to prevent system headers being used
@@ -1728,12 +1730,17 @@ if( BUILD_CLIENT )
   endif()
 
   if( USE_INTERNAL_OPUS )
-	  set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS USE_ALLOCA FLOATING_POINT OPUS_BUILD )
-	  include_directories( ${LIB_DIR}/opusfile-0.2/include ${LIB_DIR}/opus-1.0.2/include ${LIB_DIR}/opus-1.0.2/celt ${LIB_DIR}/opus-1.0.2/silk ${LIB_DIR}/opus-1.0.2/silk/float )
+      if( NOT MSVC )
+        set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS USE_ALLOCA FLOATING_POINT OPUS_BUILD )
+      else()
+        set_property( TARGET client APPEND PROPERTY COMPILE_DEFINITIONS HAVE_CONFIG_H )
+        include_directories( ${LIB_DIR}/opus-1.0.2/include/win32 )
+      endif()
+      include_directories( ${LIB_DIR}/opusfile-0.2/include ${LIB_DIR}/opus-1.0.2/include ${LIB_DIR}/opus-1.0.2/celt ${LIB_DIR}/opus-1.0.2/silk ${LIB_DIR}/opus-1.0.2/silk/float )
   else()
-	  find_package( Opus REQUIRED )
-	  include_directories( ${OPUS_INCLUDE_DIRS} )
-	  target_link_libraries( client ${OPUS_LIBRARIES} )
+      find_package( Opus REQUIRED )
+      include_directories( ${OPUS_INCLUDE_DIRS} )
+      target_link_libraries( client ${OPUS_LIBRARIES} )
   endif()
 
   if( USE_CODEC_VORBIS )
