Clean up cmake options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,23 +26,23 @@ project( Daemon C CXX )
 ################################################################################
 
 # Build targets
-option( BUILD_CLIENT         "Build Daemon client"                         1 )
-option( BUILD_SERVER         "Build Daemonded server"                      1 )
-option( BUILD_GAME_NATIVE    "Build native game logic "                    0 )
-option( BUILD_GAME_NACL      "Build NaCl game logic"                       0 )
-option( BUILD_TTY_CLIENT     "Build Daemon headless client"                0 )
-cmake_dependent_option( BUILD_OLD_RENDERER   "Build old renderer library"                            1 BUILD_CLIENT                   0 )
-cmake_dependent_option( BUILD_NEW_RENDERER   "Build new renderer library"                            1 BUILD_CLIENT                   0 )
+option( BUILD_CLIENT "Build Daemon client" 1 )
+option( BUILD_SERVER "Build Daemonded server" 1 )
+option( BUILD_GAME_NATIVE "Build native game logic " 0 )
+option( BUILD_GAME_NACL "Build NaCl game logic" 0 )
+option( BUILD_TTY_CLIENT "Build Daemon headless client" 1 )
+cmake_dependent_option( BUILD_OLD_RENDERER "Build old renderer library" 1 BUILD_CLIENT 0 )
+cmake_dependent_option( BUILD_NEW_RENDERER "Build new renderer library" 1 BUILD_CLIENT 0 )
 
-option( ENABLE_LTO           "Use link-time optimization for Release builds"                            0 )
-option( ENABLE_BUNDLING      "When packaging automatically include all non-system libraries in package" 0 )
-option( ENABLE_HARDENING     "Use stack protection"                                                     0 )
-option( ENABLE_QVM_COMPAT    "Configure the engine to use QVMs instead of NaCl"                         0 )
+option( ENABLE_LTO "Use link-time optimization for release builds" 0 )
+option( ENABLE_BUNDLING "When packaging automatically include all non-system libraries in package" 0 )
+option( ENABLE_HARDENING "Use stack protection" 0 )
+option( ENABLE_QVM_COMPAT "Configure the engine to use QVMs instead of NaCl" 0 )
 
-cmake_dependent_option( USE_MUMBLE           "Compile with support for Mumble"                       1 BUILD_CLIENT                   0 )
-cmake_dependent_option( USE_VOIP             "Compile with VOIP support"                             1 "BUILD_CLIENT OR BUILD_SERVER" 0 )
-cmake_dependent_option( USE_CURSES           "Use the curses console"                                1 "BUILD_CLIENT OR BUILD_SERVER OR BUILD_TTY_CLIENT" 0 )
-cmake_dependent_option( USE_OPENAL_DLOPEN    "Use dlopen to load OpenAL"                             1 BUILD_CLIENT                   0 )
+cmake_dependent_option( USE_MUMBLE "Compile with support for Mumble" 1 BUILD_CLIENT 0 )
+cmake_dependent_option( USE_VOIP "Compile with VOIP support" 1 "BUILD_CLIENT OR BUILD_SERVER" 0 )
+cmake_dependent_option( USE_CURSES "Use the curses console" 1 "BUILD_CLIENT OR BUILD_SERVER OR BUILD_TTY_CLIENT" 0 )
+cmake_dependent_option( USE_OPENAL_DLOPEN "Use dlopen to load OpenAL" 1 BUILD_CLIENT 0 )
 
 set( NACL_SDK_PATH "" CACHE PATH "Path to native client SDK" )
 if( BUILD_GAME_NACL AND NOT NACL_SDK_PATH )
