Remove team stages.
Stage sensors still work and assume 100 confidence is a stage.

--- a/main/configs/upgrades/ammo.attr.cfg
+++ b/main/configs/upgrades/ammo.attr.cfg
@@ -1,10 +1,12 @@
+// general
 humanName "Ammunition"
 description "Ammunition for the currently held weapon."
 icon "null"
 team humans
 
+// limits
 price 0
-stage 1
 unlockThreshold 0
 
+// abilities
 isPurchasable
