--- a/pkg/unvanquished_src.dpkdir/configs/upgrades/ammo.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/upgrades/ammo.attr.cfg
@@ -1,10 +1,12 @@
+// general
 humanName "Ammunition"
 description "Ammunition for the currently held weapon."
 icon "null"
 team humans
 
+// limits
 price 0
-stage 1
 unlockThreshold 0
 
+// abilities
 isPurchasable
