Tidy up buildable attribute configuration files.

--- a/main/configs/buildables/drill.attr.cfg
+++ b/main/configs/buildables/drill.attr.cfg
@@ -1,28 +1,29 @@
-humanName "Drill"
-description "A structure that drills for resources"
-team humans
+// Generic
+humanName         "Drill"
+description       "A structure that drills for resources"
+team              humans
 
-// Parameters for build
-unlockThreshold 0
-buildPoints 4
-buildTime 20000
-buildWeapon human
+// Generic limits
+unlockThreshold   0
+buildPoints       4
+buildTime         20000
+buildWeapon       human
 
-// Where it can be built
-minNormal 0.95
-powerConsumption 10
+// Placement limits
+minNormal         0.95
+powerConsumption  10
 
-health 200
+// Value
+reward            15
 
-// Parameters for explosion
-splashDamage 50
-splashRadius 100
-meansOfDeath humanBuildable
+// Vitality
+health            200
 
-transparentTest
+// Explosion
+splashDamage      50
+splashRadius      100
+meansOfDeath      humanBuildable
 
-reward 15
-
-radarFadeOut 0
-
-thinkPeriod 1000
+// Misc
+radarFadeOut      0
+thinkPeriod       1000
