--- a/main/configs/buildables/eggpod.attr.cfg
+++ b/main/configs/buildables/eggpod.attr.cfg
@@ -1,28 +1,30 @@
-humanName "Egg"
-description "The most basic alien structure. It allows aliens to spawn and protect the Overmind. Without any of these, the Overmind is left nearly defenseless and defeat is imminent."
-team aliens
+// Generic
+humanName         "Egg"
+description       "The most basic alien structure. It allows aliens to spawn and protect the Overmind. Without any of these, the Overmind is left nearly defenseless and defeat is imminent."
+team              aliens
 
-//Parameters for its build
-unlockThreshold 0
-buildPoints 10
-buildTime 15000
-buildWeapon allAlien
+// Generic limits
+unlockThreshold   0
+buildPoints       10
+buildTime         15000
+buildWeapon       allAlien
 
-//Where can we build it
-minNormal 0.5
+// Placement limits
+minNormal         0.5
 allowInvertNormal
 
-creepSize 120
+// Value
+reward            20
 
-health 250
-regen 8
+// Vitality
+health            250
+regen             8
 
-//Parameters for its explosion
-splashDamage 20
-splashRadius 100
-meansOfDeath alienBuildable
+// Explosion
+splashDamage      20
+splashRadius      100
+meansOfDeath      alienBuildable
 
-//How much is awarded when it is killed
-reward 20
-
-radarFadeOut 0.0
+// Misc
+creepSize         120
+radarFadeOut      0
