--- a/main/configs/buildables/medistat.attr.cfg
+++ b/main/configs/buildables/medistat.attr.cfg
@@ -1,27 +1,29 @@
-humanName "Medistation"
-description "A structure that automatically restores the health and stamina of any human that stands on it. It may only be used by one person at a time. This structure also issues medkits."
-team humans
+// Generic
+humanName         "Medistation"
+description       "A structure that automatically restores the health and stamina of any human that stands on it. It may only be used by one person at a time. This structure also issues medkits."
+team              humans
 
-//Parameters for its build
-unlockThreshold 0
-buildPoints 8
-buildTime 10000
-buildWeapon human
+// Generic limits
+unlockThreshold   0
+buildPoints       8
+buildTime         10000
+buildWeapon       human
 
-//Where can we build it
-minNormal 0.95
-powerConsumption 10
+// Placement limits
+minNormal         0.95
+powerConsumption  10
 
-health 190
+// Value
+reward            20
 
+// Vitality
+health            190
+
+// Explosion
+splashDamage      50
+splashRadius      100
+meansOfDeath      humanBuildable
+
+// Misc
+radarFadeOut      0
 transparentTest
-
-//Parameters for its explosion
-splashDamage 50
-splashRadius 100
-meansOfDeath humanBuildable
-
-//How much is awarded when it is killed
-reward 20
-
-radarFadeOut 0.0
