--- a/pkg/unvanquished_src.dpkdir/configs/buildables/repeater.attr.cfg
+++ b/pkg/unvanquished_src.dpkdir/configs/buildables/repeater.attr.cfg
@@ -1,30 +1,32 @@
-humanName "Repeater"
-description "Increases the power capacity of an area, so that more buildables can be built there. Deals severe damage to close structures if it explodes."
-team humans
+// Generic
+humanName         "Repeater"
+description       "Increases the power capacity of an area, so that more buildables can be built there. Deals severe damage to close structures if it explodes."
+team              humans
 
-//Parameters for its build
-unlockThreshold 0
-buildPoints 6
-buildTime 10000
-buildWeapon human
+// Generic limits
+unlockThreshold   0
+buildPoints       6
+buildTime         10000
+buildWeapon       human
 
-//Where can we build it
-minNormal 0.95
+// Placement limits
+minNormal         0.95
 
-health 220
+// Value
+reward            10
 
+// Vitality
+health            220
+
+// Explosion
+splashDamage      200
+splashRadius      250
+meansOfDeath      humanBuildable
+
+// Misc
+radarFadeOut      0
 usable
 transparentTest
 
-//Parameters for its explosion
-splashDamage 200
-splashRadius 250
-meansOfDeath humanBuildable
-
-//How much is awarded when it is killed
-reward 10
-
-radarFadeOut 0.0
-
-//Additional variables
-powerRadius 500
+// Local variables
+powerRadius       500
